K8S Ingress Controller 1.6.3/deployments/arcadia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: arcadia-ingress
spec:
  tls:
  - hosts:
    - emea.f5se.com
    secretName: f5sesecret-tls
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: main
          servicePort: 80
      - path: /files
        backend:
          serviceName: backend
          servicePort: 80
      - path: /api
        backend:
          serviceName: app2
          servicePort: 80
      - path: /app3
        backend:
          serviceName: app3
          servicePort: 80
